epserde/tests/fail/drop_encase.stderr
error[E0505]: cannot move out of `mem_case` because it is borrowed
  --> tests/fail/drop_encase.rs:14:10
   |
12 |     let mem_case = <MemCase<Owned<Vec<i32>>>>::encase(v);
   |         -------- binding `mem_case` declared here
13 |     let u = mem_case.uncase();
   |             -------- borrow of `mem_case` occurs here
14 |     drop(mem_case);
   |          ^^^^^^^^ move out of `mem_case` occurs here
15 |     let _u = u;
   |              - borrow later used here
